--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -275,8 +275,9 @@ header li a{
 	margin: auto;
 }
 
-.profil-mes-services img{
-	width: 100px;
+.profil-mes-services video{
+	max-width: 200px;
+	background: transparent;
 }
 
 .service {
@@ -287,8 +288,11 @@ header li a{
 	padding: 30px;
 }
 
-.service h3 {
+.service h2 {
+	font-family: "Poppins";
 	text-align: center;
+	font-size: 1.4rem;
+	margin-bottom: 40px;
 }
 
 .service p {
@@ -473,10 +477,6 @@ progress{
 	padding: 20px;
 }
 
-.menu-deroulant a {
-	cursor: pointer;
-}
-
 /* Page Accueil - Zone de filtre - Menu déroulant ul li */
 li {
 	list-style: none !important;
@@ -522,7 +522,12 @@ li {
 
 .flechehaut {
 	transform: rotate(180deg);
-  }
+	cursor: pointer;
+}
+
+.flechebas {
+	cursor: pointer;
+}
 
 
 #menu-d-1:hover,  #menu-d-2:hover, #menu-d-3:hover{
